--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.19",
-    "@trpc/client": "^10.33.1",
-    "@trpc/next": "^10.33.1",
-    "@trpc/server": "^10.33.1",
+    "@trpc/client": "^10.34.0",
+    "@trpc/next": "^10.34.0",
+    "@trpc/react": "^9.27.4",
+    "@trpc/server": "^10.34.0",
     "intuit-oauth": "^4.0.0",
     "micro": "^10.0.1",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^12.11.0",
+    "react-query": "3",
+    "stripe": "^12.12.0",
     "superjson": "^1.12.4",
     "zod": "^3.21.4"
   },
